--- a/GUVI/LOGIN.css
+++ b/GUVI/LOGIN.css
@@ -149,7 +149,7 @@ form{
 .registration{
     padding: 60px;
     width: 50%;
-    background-color:rgba(128, 128, 128, 0.604);
+    background-color:rgba(128, 128, 128, 0.604);}
     
    
 
